ontol/ontol-compiler/test-cases/error/rel/needs_arc.on
def Foo (
    rel. 'id': (rel* is: uuid)
    rel* 'self'?: . // ERROR entity-to-entity relationship must use an arc
)
